--- a/NewStart/style.css
+++ b/NewStart/style.css
@@ -1,13 +1,23 @@
 body {
-  font-family: 'Dosis', sans-serif;
+  font-family: "Dosis", sans-serif;
   font-weight: 500;
 }
 
-a {
-  color: orange;
+header {
+  position: relative;
+  z-index: 1;
+  padding: 20px 0;
+  background-color: #212529;
 }
-
-a:hover {
-  color: black;
+header .imgbox {
+  width: 200px;
 }
-/*# sourceMappingURL=style.css.map */
+header nav a {
+  font-size: 20px;
+  color: white;
+  margin-right: 30px;
+  transition: 1s;
+}
+header nav a:hover {
+  color: #dede30;
+}/*# sourceMappingURL=style.css.map */
