--- a/NewStart/_services.sass
+++ b/NewStart/_services.sass
@@ -1,6 +1,9 @@
 #services
     padding: 90px 0 90px 0
-    margin: 90px 0px 90px 0
+    margin: 90px 0 90px 0
+    position: relative
+    top: 200px
+    bottom: 625px
     .textcenter
         h1
             padding: 30px
@@ -27,8 +30,8 @@
             background-color: #ffc800
             li
                 .icon
-                     color: #ffff
-                     font-size: 60px
+                    color: #ffff
+                    font-size: 60px
     .textbox
         padding: 10px
         h2
