--- a/NewStart/style.css
+++ b/NewStart/style.css
@@ -3,6 +3,10 @@ body {
   font-weight: 500;
 }
 
+.imgbox img {
+  width: 100%;
+}
+
 header {
   position: relative;
   z-index: 1;
@@ -53,7 +57,7 @@ header nav a:hover {
   font-size: 21px;
   color: white;
 }
-#nice .imgbox img {
+#nice .imgbox {
   width: 100%;
   height: 100%;
   background-position: center center;
@@ -65,7 +69,10 @@ header nav a:hover {
 
 #services {
   padding: 90px 0 90px 0;
-  margin: 90px 0px 90px 0;
+  margin: 90px 0 90px 0;
+  position: relative;
+  top: 200px;
+  bottom: 625px;
 }
 #services .textcenter h1 {
   padding: 30px;
