--- a/NewStart/_portfolio.sass
+++ b/NewStart/_portfolio.sass
@@ -18,11 +18,13 @@
                 position: relative
                 right: 245px
                 top: 120px
-                transition: 1s
+                transition: 1.5s
                 &:hover
                     position: relative
                     right: 245px
                     top: 120px
+                    transition: 1.5s
+                    cursor: pointer
                     color: #ffff
                     background-color: #f4e21bcf
     .textbox
