--- a/NewStart/style.css
+++ b/NewStart/style.css
@@ -142,12 +142,14 @@ header nav a:hover {
   position: relative;
   right: 245px;
   top: 120px;
-  transition: 1s;
+  transition: 1.5s;
 }
 #portfolio .mainbox li .icon:hover {
   position: relative;
   right: 245px;
   top: 120px;
+  transition: 1.5s;
+  cursor: pointer;
   color: white;
   background-color: rgba(244, 226, 27, 0.8117647059);
 }
@@ -163,4 +165,22 @@ header nav a:hover {
   margin: 5px;
   font-size: 18px;
   color: rgba(106, 105, 105, 0.7098039216);
+}
+
+#about {
+  padding: 90px;
+}
+#about .textcenter {
+  padding: 50px;
+}
+#about .textcenter h1 {
+  font-size: 50px;
+  font-weight: 700;
+  font-size: bold;
+  color: #110909;
+}
+#about .textcenter h3 {
+  margin: 20px;
+  font-size: 20px;
+  color: #110909;
 }/*# sourceMappingURL=style.css.map */
