--- a/NewStart/_about.sass
+++ b/NewStart/_about.sass
@@ -1,7 +1,7 @@
 #about
-    padding: 90px
+    padding: 30px
     .textcenter
-        padding: 50px
+        padding: 30px
         h1
             font-size: 50px
             font-weight: 700
@@ -11,3 +11,13 @@
             margin: 20px
             font-size: 20px
             color: #110909
+    .box
+        .textbox
+            h2
+                font-size: 50px
+                color: #110909
+            h4
+                font-size: 28px
+                color: #110909
+                font-weight: 700
+                font-size: bold
