--- a/NewStart/_about.sass
+++ b/NewStart/_about.sass
@@ -12,12 +12,21 @@
             font-size: 20px
             color: #110909
     .box
+        padding: 30px
         .textbox
             h2
-                font-size: 50px
+                font-size: 30px
                 color: #110909
             h4
-                font-size: 28px
+                font-size: 18px
                 color: #110909
                 font-weight: 700
                 font-size: bold
+        .imgbox
+            width: 150px
+            height: 150px
+            border: 5px solid #db4747
+            border-radius: 250px
+            position: relative
+            bottom: 150px
+            left: 600px
