--- a/NewStart/style.css
+++ b/NewStart/style.css
@@ -183,13 +183,25 @@ header nav a:hover {
   font-size: 20px;
   color: #110909;
 }
+#about .box {
+  padding: 30px;
+}
 #about .box .textbox h2 {
-  font-size: 50px;
+  font-size: 30px;
   color: #110909;
 }
 #about .box .textbox h4 {
-  font-size: 28px;
+  font-size: 18px;
   color: #110909;
   font-weight: 700;
   font-size: bold;
+}
+#about .box .imgbox {
+  width: 150px;
+  height: 150px;
+  border: 5px solid #db4747;
+  border-radius: 250px;
+  position: relative;
+  bottom: 150px;
+  left: 600px;
 }/*# sourceMappingURL=style.css.map */
