--- a/NewStart/_about.sass
+++ b/NewStart/_about.sass
@@ -11,22 +11,28 @@
             margin: 20px
             font-size: 20px
             color: #110909
-    .box
-        padding: 30px
-        .textbox
-            h2
-                font-size: 30px
-                color: #110909
-            h4
-                font-size: 18px
-                color: #110909
-                font-weight: 700
-                font-size: bold
-        .imgbox
-            width: 150px
-            height: 150px
-            border: 5px solid #db4747
-            border-radius: 250px
-            position: relative
-            bottom: 150px
-            left: 600px
+    .textbox
+        position: relative
+        right: 125px
+        h2
+            font-size: 50px
+            color: #110909
+            font-weight: 700
+        h4
+            margin: 10px
+            font-size: 25px
+            color: #110909
+            font-weight: 700
+            font-size: bold
+        p
+            font-size: 20px
+            color: #a5a3a3
+    .imgbox
+        width: 150px
+        margin-top: 20px
+        border: 5px solid #ac1c1c
+        border-radius: 70px
+        position: relative
+        bottom: 185px
+        left: 560px
+        
