--- a/NewStart/_about.sass
+++ b/NewStart/_about.sass
@@ -29,10 +29,11 @@
             color: #a5a3a3
     .imgbox
         width: 150px
-        margin-top: 20px
-        border: 5px solid #ac1c1c
-        border-radius: 70px
+        margin: 10px
+        overflow: hidden
+        border-radius: 100px
+        border: 5px solid #bab4b4
+    .gln
         position: relative
-        bottom: 185px
-        left: 560px
-        
+        left: 530px
+        bottom: 155px
