--- a/NewStart/style.css
+++ b/NewStart/style.css
@@ -3,8 +3,15 @@ body {
   font-weight: 500;
 }
 
+.imgbox {
+  overflow: hidden;
+}
 .imgbox img {
   width: 100%;
+}
+
+section {
+  padding: 50px 0;
 }
 
 header {
@@ -206,7 +213,6 @@ header nav a:hover {
 #about .imgbox {
   width: 150px;
   margin: 10px;
-  overflow: hidden;
   border-radius: 100px;
   border: 5px solid #bab4b4;
 }
