--- a/NewStart/_about.sass
+++ b/NewStart/_about.sass
@@ -1,7 +1,6 @@
 #about
-    padding: 30px
     .textcenter
-        padding: 30px
+        padding: 20px
         h1
             font-size: 50px
             font-weight: 700
@@ -11,28 +10,38 @@
             margin: 20px
             font-size: 20px
             color: #110909
-    .textbox
+    .box
         position: relative
-        right: 125px
-        h2
-            font-size: 50px
-            color: #110909
-            font-weight: 700
-        h4
-            margin: 10px
-            font-size: 25px
-            color: #110909
-            font-weight: 700
-            font-size: bold
-        p
-            font-size: 20px
-            color: #a5a3a3
-    .imgbox
-        width: 150px
-        margin: 10px
-        border-radius: 100px
-        border: 5px solid #bab4b4
-    .gln
+        left: 140px
+        .textbox
+            .minibox
+                h2
+                    font-size: 27px
+                    color: #110909
+                    font-weight: 700
+                h4
+                    margin: 15px 0
+                    font-size: 35px
+                    color: #110909
+                    font-weight: 700
+                    font-size: bold
+                p
+                    font-size: 20px
+                    color: #a5a3a3
+        .imgbox
+            width: 680px
+            margin: 50px
+            border-radius: 100px
+            border: 5px solid #3fb1d7
+    .one
         position: relative
-        left: 530px
-        bottom: 155px
+        left: 510px
+        width: 680px
+    .two
+        position: relative
+        left: 110px
+        width: 680px
+    .three
+        position: relative
+        left: 510px
+        width: 680px
