--- a/NewStart/_services.sass
+++ b/NewStart/_services.sass
@@ -1,15 +1,7 @@
 #services
-    padding: 90px 0 90px 0
-    margin: 90px 0 90px 0
-    position: relative
-    top: 200px
-    bottom: 625px
     .textcenter
-        padding: 50px
+        padding: 30px
         h1
-            position: relative
-            top: 0px
-            bottom: 125px
             font-size: 50px
             font-weight: 700
             font-size: bold
@@ -17,12 +9,12 @@
         h3
             margin: 20px
             font-size: 20px
-            color: #110909
+            color: #6a6969b5
     .box
+        display: flex
+        justify-content: space-around
         margin: 10px
         .minibox
-            position: relative
-            left: 115px
             height: 150px
             width: 150px
             border-radius: 180px
@@ -40,3 +32,5 @@
         h4
             padding: 16px
             font-size: 20px
+            color: #6a6969b5
+
