--- a/NewStart/_header.sass
+++ b/NewStart/_header.sass
@@ -1,10 +1,15 @@
 header
-    position: relative
+    position: fixed
     z-index: 1
+    display: flex
+    flex-wrap: wrap-reverse
+    justify-content: space-between
+    align-items: flex-end
     padding: 20px 0
+    width: 100%
     background-color: #212529
     .imgbox
-        width: 200px
+        height: 100%
     nav
         a
             font-size: 20px
@@ -13,3 +18,20 @@ header
             transition: 1s
             &:hover
                 color: #dede30
+    .btn
+        display: flex
+        justify-content: space-between
+        font-size: 25px
+        border-radius: 2px
+        background-color: #253132
+        color: #c4baba
+        border: 5px solid #c4baba
+        cursor: pointer
+        h1
+            margin: 5px
+            font-size: 13px
+            color: #c4baba
+        .icon
+            font-size: 15px
+
+@media screen and ( min-width: 992px )
