--- a/NewStart/_nice.sass
+++ b/NewStart/_nice.sass
@@ -2,9 +2,6 @@
     .box
         margin: 70px 0
         text-align: center
-        position: relative
-        top: 120px
-        z-index: 1
         h1
             font-size: 40px
             color: #ffff
@@ -15,8 +12,6 @@
             color: #ffff
             font-weight: 3px
         .btn
-            position: relative
-            right: 35px
             margin: 20px
             padding: 18px 35px
             background-color: #ffc800
@@ -25,11 +20,6 @@
             h3
                 font-size: 21px
                 color: #ffff
-    .imgbox
-        width: 100%
-        height: 100%
-        background-position: center center
-        background-size: cover
-        position: absolute
-        top: 5px
-        right: 0px
+        .imgbox
+            height: 400px
+            background-size: cover
