--- a/NewStart/_portfolio.sass
+++ b/NewStart/_portfolio.sass
@@ -1,5 +1,4 @@
 #portfolio
-    padding: 90px
     .textcenter
         padding: 50px
         h1
@@ -19,14 +18,19 @@
                 right: 240px
                 top: 120px
                 transition: 1.5s
-                &:hover
-                    position: relative
-                    right: 245px
-                    top: 120px
-                    transition: 1.5s
-                    cursor: pointer
-                    color: #ffff
-                    background-color: #f4e21bcf
+            &:hover
+                display: flex
+                justify-content: center
+                align-items: center
+                width: 100%
+                position: relative
+                right: 245px
+                top: 120px
+                transition: 1.5s
+                color: #ffff
+                cursor: pointer
+                background-color: #f4e21bcf
+
     .textbox
         padding: 20px
         h4
