--- a/NewStart/_about.sass
+++ b/NewStart/_about.sass
@@ -11,8 +11,6 @@
             font-size: 20px
             color: #110909
     .box
-        position: relative
-        left: 140px
         .textbox
             .minibox
                 h2
@@ -29,19 +27,14 @@
                     font-size: 20px
                     color: #a5a3a3
         .imgbox
-            width: 680px
+            width: 100%
             margin: 50px
             border-radius: 100px
-            border: 5px solid #3fb1d7
+            border: 5px solid #b3b0b0b5
     .one
-        position: relative
-        left: 510px
-        width: 680px
+        display: flex
+        justify-content: center
+        align-items: center
     .two
-        position: relative
-        left: 110px
-        width: 680px
+
     .three
-        position: relative
-        left: 510px
-        width: 680px
