--- a/NewStart/_nice.sass
+++ b/NewStart/_nice.sass
@@ -1,25 +1,26 @@
 #nice
+    background-image: url("https://startbootstrap.github.io/startbootstrap-agency/assets/img/header-bg.jpg")
+    background-position: center center
+    background-size: cover
+    height: 100%
     .box
-        margin: 70px 0
-        text-align: center
-        h1
-            font-size: 40px
-            color: #ffff
-        h2
-            margin: 15px
-            font-size: 120px
-            font-size: bold
-            color: #ffff
-            font-weight: 3px
-        .btn
-            margin: 20px
-            padding: 18px 35px
-            background-color: #ffc800
-            border-radius: 5px
-            font-size: 20px
-            h3
+        .textbox
+            margin: 70px 0
+            text-align: center
+            h1
+                font-size: 40px
+                color: #ffff
+            h2
+                margin: 15px
+                font-size: 120px
+                font-size: bold
+                color: #ffff
+                font-weight: 3px
+            .btn
+                margin: 20px
+                padding: 18px 35px
+                background-color: #ffc800
+                border-radius: 5px
+                font-size: 20px
                 font-size: 21px
                 color: #ffff
-        .imgbox
-            height: 400px
-            background-size: cover
