--- a/NewStart/_about.sass
+++ b/NewStart/_about.sass
@@ -1,4 +1,5 @@
 #about
+    height: 100hv
     .textcenter
         padding: 20px
         h1
@@ -12,29 +13,22 @@
             color: #110909
     .box
         .textbox
-            .minibox
-                h2
-                    font-size: 27px
-                    color: #110909
-                    font-weight: 700
-                h4
-                    margin: 15px 0
-                    font-size: 35px
-                    color: #110909
-                    font-weight: 700
-                    font-size: bold
-                p
-                    font-size: 20px
-                    color: #a5a3a3
+            width: 150px
+            h2
+                font-size: 27px
+                color: #110909
+                font-weight: 700
+            h4
+                margin: 15px 0
+                font-size: 35px
+                color: #110909
+                font-weight: 700
+                font-size: bold
+            p
+                font-size: 20px
+                color: #a5a3a3
         .imgbox
-            width: 100%
-            margin: 50px
+            width: 150px
+            height: 150px
             border-radius: 100px
             border: 5px solid #b3b0b0b5
-    .one
-        display: flex
-        justify-content: center
-        align-items: center
-    .two
-
-    .three
