--- a/NewStart/_portfolio.sass
+++ b/NewStart/_portfolio.sass
@@ -19,18 +19,15 @@
                 top: 120px
                 transition: 1.5s
             &:hover
-                display: flex
-                justify-content: center
-                align-items: center
                 width: 100%
-                position: relative
-                right: 245px
-                top: 120px
                 transition: 1.5s
                 color: #ffff
                 cursor: pointer
                 background-color: #f4e21bcf
-
+                overflow: hidden
+                position: relative
+                right: 245px
+                top: 120px
     .textbox
         padding: 20px
         h4
