--- a/NewStart/_about.sass
+++ b/NewStart/_about.sass
@@ -1,9 +1,7 @@
 #about
-    height: 100hv
     .textcenter
-        padding: 20px
         h1
-            font-size: 50px
+            font-size: 60px
             font-weight: 700
             font-size: bold
             color: #110909
@@ -12,23 +10,47 @@
             font-size: 20px
             color: #110909
     .box
+        display: flex
+        align-items: center
         .textbox
-            width: 150px
-            h2
+            margin: 30px
+            width: 400px
+            text-align: end
+            h2,h4
                 font-size: 27px
-                color: #110909
+                line-height: 1.3
                 font-weight: 700
-            h4
-                margin: 15px 0
-                font-size: 35px
-                color: #110909
-                font-weight: 700
-                font-size: bold
+
             p
                 font-size: 20px
                 color: #a5a3a3
+                line-height: 1.4
         .imgbox
             width: 150px
             height: 150px
             border-radius: 100px
             border: 5px solid #b3b0b0b5
+    .right
+        display: flex
+        justify-content: center
+        .textbox
+            text-align: start
+    .yellow
+        display: flex
+        justify-content: center
+    .mainbox
+        display: flex
+        justify-content: end
+        width: 150px
+        height: 150px
+        border-radius: 100px
+        border: 5px solid #b3b0b0b5
+        background-color: #fae608
+        .minibox
+            text-align: center
+            padding: 0 40px
+            h2
+                font-size: 20px
+                font-size: 700
+                line-height: 1.2
+                color: #ffff
