--- a/NewStart/style.css
+++ b/NewStart/style.css
@@ -16,17 +16,23 @@ section {
 
 header {
   position: fixed;
+  left: 0;
+  right: 0;
   z-index: 1;
   display: flex;
-  flex-wrap: wrap-reverse;
   justify-content: space-between;
-  align-items: flex-end;
-  padding: 20px 0;
-  width: 100%;
+  align-items: center;
+  background-color: #212529;
+  padding: 10px 0;
+  height: 70px;
   background-color: #212529;
 }
 header .imgbox {
-  height: 100%;
+  width: 140px;
+  margin-left: 120px;
+}
+header nav {
+  margin-right: 120px;
 }
 header nav a {
   font-size: 20px;
@@ -39,21 +45,25 @@ header nav a:hover {
 }
 header .btn {
   display: flex;
-  justify-content: space-between;
+  align-items: center;
+  display: none;
   font-size: 25px;
   border-radius: 2px;
   background-color: #253132;
-  color: #c4baba;
-  border: 5px solid #c4baba;
+  color: white;
+  border: 1px solid #c4baba;
+  padding: 2px;
   cursor: pointer;
+  opacity: 0.6;
 }
 header .btn h1 {
-  margin: 5px;
+  cursor: pointer;
   font-size: 13px;
-  color: #c4baba;
+  font-weight: 700;
 }
 header .btn .icon {
-  font-size: 15px;
+  margin-left: 7px;
+  cursor: pointer;
 }
 
 #nice {
