--- a/NewStart/_header.sass
+++ b/NewStart/_header.sass
@@ -42,4 +42,28 @@ header
             margin-left: 7px
             cursor: pointer
 
-@media screen and ( min-width: 992px )
+    @media screen and ( min-width: 576px )
+        .menu
+            height: 70px
+            .btn
+                margin-right: 10px
+                padding: 6px 10px
+            .imgbox
+                margin-left: 20px
+    @media screen and ( min-width: 768px )
+        .menu
+            nav
+                display: none
+            .btn
+                display: flex
+                margin-right: 30px
+            .imgbox
+                margin-left: 20px
+    @media screen and ( min-width: 992px )
+        .menu
+            nav
+                margin-right: 55px
+                a
+                    margin: 0 10px
+            .imgbox
+                margin-left: 40px
