--- a/NewStart/_portfolio.sass
+++ b/NewStart/_portfolio.sass
@@ -1,6 +1,7 @@
 #portfolio
-    .textcenter
-        padding: 50px
+    .textbox
+        padding-top: 20px
+        text-align: center
         h1
             font-size: 55px
             font-weight: 700
@@ -10,26 +11,6 @@
             margin: 20px
             font-size: 20px
             color: #110909
-    .mainbox
-        li
-            .icon
-                font-size: 60px
-                position: relative
-                right: 240px
-                top: 120px
-                transition: 1.5s
-            &:hover
-                width: 100%
-                transition: 1.5s
-                color: #ffff
-                cursor: pointer
-                background-color: #f4e21bcf
-                overflow: hidden
-                position: relative
-                right: 245px
-                top: 120px
-    .textbox
-        padding: 20px
         h4
             font-size: 30px
             font-weight: 700
@@ -38,3 +19,25 @@
             margin: 5px
             font-size: 18px
             color: #6a6969b5
+    .box
+        background-color: #ffff
+        padding-bottom: 20px
+        text-align: center
+        .imgbox
+            position: relative
+            .icon
+                width: 100%
+                display: flex
+                justify-content: center
+                align-items: center
+                color: #ffff
+                font-size: 60px
+                position: absolute
+                top: 0
+                bottom: 0
+                opacity: 0
+                &:hover
+                    background-color: #ffbb00
+                    opacity: 0.9
+                    transition: 0.5s
+                    cursor: pointer
