--- a/NewStart/style.css
+++ b/NewStart/style.css
@@ -189,40 +189,20 @@ header .btn .icon {
   color: rgba(106, 105, 105, 0.7098039216);
 }
 
-#portfolio .textcenter {
-  padding: 50px;
+#portfolio .textbox {
+  padding-top: 20px;
+  text-align: center;
 }
-#portfolio .textcenter h1 {
+#portfolio .textbox h1 {
   font-size: 55px;
   font-weight: 700;
   font-size: bold;
   color: #110909;
 }
-#portfolio .textcenter h3 {
+#portfolio .textbox h3 {
   margin: 20px;
   font-size: 20px;
   color: #110909;
-}
-#portfolio .mainbox li .icon {
-  font-size: 60px;
-  position: relative;
-  right: 240px;
-  top: 120px;
-  transition: 1.5s;
-}
-#portfolio .mainbox li:hover {
-  width: 100%;
-  transition: 1.5s;
-  color: white;
-  cursor: pointer;
-  background-color: rgba(244, 226, 27, 0.8117647059);
-  overflow: hidden;
-  position: relative;
-  right: 245px;
-  top: 120px;
-}
-#portfolio .textbox {
-  padding: 20px;
 }
 #portfolio .textbox h4 {
   font-size: 30px;
@@ -233,6 +213,32 @@ header .btn .icon {
   margin: 5px;
   font-size: 18px;
   color: rgba(106, 105, 105, 0.7098039216);
+}
+#portfolio .box {
+  background-color: white;
+  padding-bottom: 20px;
+  text-align: center;
+}
+#portfolio .box .imgbox {
+  position: relative;
+}
+#portfolio .box .imgbox .icon {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 60px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  opacity: 0;
+}
+#portfolio .box .imgbox .icon:hover {
+  background-color: #ffbb00;
+  opacity: 0.9;
+  transition: 0.5s;
+  cursor: pointer;
 }
 
 #about .textcenter h1 {
