--- a/NewStart/_about.sass
+++ b/NewStart/_about.sass
@@ -54,3 +54,63 @@
                 font-size: 700
                 line-height: 1.2
                 color: #ffff
+    @media screen and ( max-width: 992px )
+        .box
+            margin: 0 0 100px 0
+            align-items: flex-start
+            .textbox
+                width: 190px
+
+    @media screen and ( max-width: 768px )
+        .text-center
+            h1
+                font-size: 55px
+            h3
+                font-size: 18px
+        .box
+            align-items: flex-start
+            flex-direction: row-reverse
+            margin: 0 0 70px 0
+            .textbox
+                width: 400px
+                text-align: start
+            .imgbox
+                width: 140px
+                height: auto
+                margin: 0
+        .right
+            margin: 0 0 70px 0
+            flex-direction: row
+            .textbox
+                text-align: start
+        .yellow
+            justify-content: flex-start
+        .mainbox
+            width: 140px
+            height: 140px
+            .minibox
+                padding: 0 30px
+
+    @media screen and ( max-width: 576px )
+        .text-center
+            h1
+                font-size: 50px
+            h3
+                font-size: 18px
+        .box
+            .imgbox
+                width: 140px
+                height: auto
+            .textbox
+                h2,h4
+                    font-size: 25px
+                p
+                    font-size: 18px
+        .yellow
+        .mainbox
+            width: 100px
+            height: 100px
+            .minibox
+                padding: 0 15px
+                h2
+                    font-size: 18px
