--- a/NewStart/_header.sass
+++ b/NewStart/_header.sass
@@ -16,27 +16,22 @@ header
     nav
         margin-right: 120px
         a
-            font-size: 20px
-            color: #ffff
-            margin-right: 30px
-            transition: 1s
+            font-size: 19px
+            margin: 0 20px
+            cursor: pointer
             &:hover
                 color: #dede30
     .btn
         display: flex
         align-items: center
         display: none
-        font-size: 25px
-        border-radius: 2px
-        background-color: #253132
         color: #ffff
-        border: 1px solid #c4baba
+        border: 1px solid #ffff
         padding: 2px
-        cursor: pointer
         opacity: 0.6
         h1
             cursor: pointer
-            font-size: 13px
+            font-size: 17px
             font-weight: 700
         .icon
             margin-left: 7px
