--- a/NewStart/_companies.sass
+++ b/NewStart/_companies.sass
@@ -8,5 +8,7 @@
             width: 200px
         .ibm
             width: 100px
-        
-    
+    @media screen and ( max-width: 576px )
+        .box
+            .imgbox
+                margin-top: 50px
