--- a/NewStart/style.css
+++ b/NewStart/style.css
@@ -235,6 +235,26 @@ header .btn .icon {
   transition: 0.5s;
   cursor: pointer;
 }
+@media screen and (max-width: 992px) {
+  #portfolio .box .imgbox {
+    width: auto;
+  }
+}
+@media screen and (max-width: 576px) {
+  #portfolio .textbox h1 {
+    font-size: 40px;
+  }
+  #portfolio .textbox h3 {
+    font-size: 18px;
+    margin-bottom: 35px;
+  }
+  #portfolio .box {
+    margin-bottom: 50px;
+  }
+  #portfolio .box .imgbox {
+    width: auto;
+  }
+}
 
 #about .textcenter h1 {
   font-size: 60px;
