--- a/NewStart/_services.sass
+++ b/NewStart/_services.sass
@@ -33,4 +33,7 @@
             padding: 16px
             font-size: 20px
             color: #6a6969b5
-
+    @media screen and ( max-width: 768px  )
+        .textbox
+            padding: 0 0 50px
+        
